--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,8 +5,8 @@
 <footer id="footer">
   <div class="container">
     <div class="left-section">
-      <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo.png"
-          alt="Junk Force Michigan logo" width="264" height="78" /></a>
+      <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo.webp"
+          alt="Michigan Fencing Solutions logo" width="264" height="78" /></a>
     </div>
     <div class="right-section">
       <div class="lists">
@@ -34,23 +34,25 @@
           <li>
             <h2>Our Services</h2>
           </li>
-          <li><a href="/junk-removal/">Junk Removal Service</a></li>
-          <li><a href="/furniture-hauling/">Furniture Hauling</a></li>
-          <li><a href="/appliance-disposal/">Appliance Disposal</a></li>
-          <li><a href="/yard-waste/">Yard Waste Removal</a></li>
+          <li><a href="/wood-privacy-fences/">Wood Privacy Fences</a></li>
+          <li><a href="/chain-link-fences/">Chain-Link Fences</a></li>
+          <li><a href="/vinyl-fencing/">Vinyl Fencing</a></li>
+          <li><a href="/deck-repair/">Deck Repair</a></li>
+          <li><a href="/fence-replacement/">Fence Replacement</a></li>
+          <li><a href="/gate-installation/">Gate Installation</a></li>
         </ul>
         <ul>
           <li>
             <h2>Contact</h2>
           </li>
           <li>
-            <a href="/contact">Berkley, Michigan</a>
+            <a href="/contact">Kalamazoo, MI 49024</a>
           </li>
           <li>
-            <a href="tel:313-444-9540">Tel: (313) 444-9540</a>
+            <a href="tel:269-615-8646">Tel: (269) 615-8646</a>
           </li>
           <li>
-            <a href="mailto:mike@junkforcemichigan.com">mike@junkforcemichigan.com</a>
+            <a href="mailto:Richardsturd@gmail.com">Richardsturd@gmail.com</a>
           </li>
         </ul>
       </div>
