--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -14,11 +14,11 @@
         <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
         <a class="logo" aria-label="click to go to home page" href="/">
             <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-            <img class="light" aria-hidden="true" src="/assets/images/logo.png" decoding="async" alt="logo" width="221"
+            <img class="light" aria-hidden="true" src="/assets/images/logo.webp" decoding="async" alt="logo" width="221"
                 height="66">
 
             <!--Dark Colored Logo-->
-            <img class="dark" aria-hidden="true" src="/assets/images/logo.png" decoding="async" loading="lazy"
+            <img class="dark" aria-hidden="true" src="/assets/images/logo.webp" decoding="async" loading="lazy"
                 alt="logo" width="221" height="66">
         </a>
 
@@ -38,10 +38,12 @@
                         {{ entry.title }}
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="/junk-removal/">Junk Removal</a></li>
-                        <li><a href="/furniture-hauling/">Furniture Hauling</a></li>
-                        <li><a href="/appliance-disposal/">Appliance Disposal</a></li>
-                        <li><a href="/yard-waste/">Yard Waste</a></li>
+                        <li><a href="/wood-privacy-fences/">Wood Privacy Fences</a></li>
+                        <li><a href="/chain-link-fences/">Chain-Link Fences</a></li>
+                        <li><a href="/vinyl-fencing/">Vinyl Fencing</a></li>
+                        <li><a href="/deck-repair/">Deck Repair</a></li>
+                        <li><a href="/fence-replacement/">Fence Replacement</a></li>
+                        <li><a href="/gate-installation/">Gate Installation</a></li>
                     </ul>
 
                     {% else %}
