--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -6,14 +6,8 @@
   <div class="container">
     <div class="left-section">
       <a class="logo" href="/"
-        ><img
-          loading="lazy"
-          decoding="async"
-          src="/assets/images/logo.webp"
-          alt="Michigan Fencing Solutions logo"
-          width="264"
-          height="78"
-      /></a>
+      <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo_white.png"
+          alt="Michigan Fencing Solutions logo" width="264" height="78" />
     </div>
     <div class="right-section">
       <div class="lists">
@@ -68,9 +62,7 @@
 
   <div class="credit">
     <span>Designed and Hand Coded by</span>
-    <a href="www.kalamazoowebsitedesign.com" target="_blank" rel="noopener"
-      >Kalamazoo Website Design</a
-    >
+    <a href="www.kalamazoowebsitedesign.com" target="_blank" rel="noopener">Kalamazoo Website Design</a>
     <span class="copyright"> Copyright 2025 - Present</span>
   </div>
 </footer>
