--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="left-section">
       <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo_white.png"
-          alt="Michigan Fencing Solutions logo" width="264" height="78" />
+          alt="Michigan Fencing Solutions logo" width="264" height="78" /></a>
     </div>
     <div class="right-section">
       <div class="lists">
